iac/k8s/traefik/ingressroute-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"traefik-dashboard","namespace":"traefik"},"spec":{"entryPoints":["web"],"routes":[{"kind":"Rule","match":"Host(`traefik.dungxbuif.com`) \u0026\u0026 (PathPrefix(`/dashboard`) || PathPrefix(`/api`))","services":[{"kind":"TraefikService","name":"api@internal"}]}]}}
    meta.helm.sh/release-name: traefik
    meta.helm.sh/release-namespace: traefik
  creationTimestamp: "2026-06-03T04:29:47Z"
  generation: 2
  labels:
    app.kubernetes.io/instance: traefik-traefik
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-40.2.0
  name: traefik-dashboard
  namespace: traefik
  resourceVersion: "23493"
  uid: 8a247c82-b5d2-4aa7-ab6e-bafd720c3f31
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`traefik.dungxbuif.com`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
    services:
    - kind: TraefikService
      name: api@internal
